--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -145,6 +145,13 @@
 	<!-- /account-container -->
 
 
+	         	
+
+<!------------------------------------------------------ keep footer here ---------------------------------------------->
+                                            <div id="footer" ng-include="'footer.html'">footer</div>
+<!----------------------------------------------------------------------- ---------------------------------------------->
+
+
 
 	<script src="lib/bootstrap/js/bootstrap.js"></script>
 
